--- a/css/second-fold.css
+++ b/css/second-fold.css
@@ -1,5 +1,5 @@
 #infographic {
-    height: 785px;
+    flex-grow: 2;
     background: url(../img/infographic.png) center center no-repeat;    
     margin: 0 60px;
 }
